--- a/view/home/index.html
+++ b/view/home/index.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="content">
-        <p style="text-align: center">Acorta tu url para que sea más simple.</p>
+        <p style="text-align: center">Acorta tu url para que sea más simple. La duración de cada url es de 24 horas</p>
         <br>
         <form method="post">
             {{__TOKEN__}}
