--- a/assets/css/home/index.css
+++ b/assets/css/home/index.css
@@ -16,8 +16,8 @@
 
 .content {
     background-color: azure;
-    width: 50%;
-    height: 20%;
+    width: 80%;
+    height: auto;
 
     border-radius: 15px;
     padding: 15px 15px;
